2012-04-18 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>

	* ResDoubleGaussE_1: Implemented a protection against unstable KLFitter states caused by jets with energies far off the TF validation range.
	* tag KLFitter-00-05-08

2012-04-05 Stefanie Adomeit <stefanie.adomeit@cern.ch>

	* added b-tagging method kVetoNoFit to remove permutations with b-tagged jets in the position of a W-decay parton
	* added RemoveForbiddenParticlePermutations() method to likelihood classes (needed for kVetoNoFit)
	* tag KLFitter-00-05-07

2012-02-20 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>

	* LikelihoodTopLeptonJetsUDSep: Runtime decreased by 50% now also in case of 5 jet fits.
	* tag KLFitter-00-05-05

2012-01-16 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>

	* Included MC11b transfer functions (new parametrization for bJets!)
	* DetectorAtlas_7TeV.cxx checks for "mc11b" string in TF path to switch to new parametrization
	* tag KLFitter-00-05-04

2011-10-20 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>

	* Non-critical bug in LikelihoodTopLeptonJets::BuildModelParticles(), leading to crashes with 
	  certain gcc/ROOT combinations, was removed.
	* Compiler warnings removed.
	* tag KLFitter-00-05-03

2011-10-11 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>

	* Runtime for u/d separation likelihood decreased by 50%.
	* Introduced the possibility to cache likelihood values.
	* InterfaceD3PD.cxx automatically corrects negative particle masses to 0.
	* tag KLFitter-00-05-02

2011-09-19 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>

	* EventProbability structure changed (outsourcing of sub parts)
	* New Likelihood: LikelihoodTopLeptonJetsUDSep with the ability to separate u and d type quarks from the W (uses 24 permutations, consumes more runtime)
	* New Likelihood needs and additional flag in the config file (LJetSeparationMethod)
	* An example for the usage of LikelihoodTopLeptonJetsUDSep is in ./examples/top_ljets_udsep/